# core

./: .gitignore  Cargo.toml  README.md  build.rs  deno.json  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: ci.yml
js/serde/: index.d.ts  index.mjs  index.ts
js/traits/: index.d.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-x64-msvc/: package.json
src/: api.rs  api_types.rs  bindings_napi.rs  bindings_wasm.rs  debug.rs  expand_core.rs  lib.rs  manifest.rs  napi_functions.rs  napi_types.rs  plugin.rs  position_mapper.rs
src/builtin/: derive_clone.rs  derive_common.rs  derive_debug.rs  derive_default.rs  derive_hash.rs  derive_ord.rs  derive_partial_eq.rs  derive_partial_ord.rs  mod.rs  return_types.rs
src/builtin/derive_clone/: clone_generation.rs  core.rs  mod.rs
src/builtin/derive_common/: field_options.rs  mod.rs  registry_helpers.rs  tests.rs  type_utils.rs
src/builtin/derive_debug/: core.rs  debug_generation.rs  mod.rs  tests.rs  types.rs
src/builtin/derive_default/: core.rs  mod.rs  tests.rs  types.rs
src/builtin/derive_hash/: core.rs  hash_generation.rs  mod.rs  tests.rs  types.rs
src/builtin/derive_ord/: comparison.rs  core.rs  mod.rs  tests.rs  types.rs
src/builtin/derive_partial_eq/: core.rs  equality.rs  mod.rs  tests.rs  types.rs
src/builtin/derive_partial_ord/: comparison.rs  core.rs  mod.rs  tests.rs  types.rs
src/builtin/serde/: derive_deserialize.rs  derive_serialize.rs  foreign_types.rs  helpers.rs  mod.rs  options.rs  tests.rs  type_category.rs  validators.rs
src/builtin/serde/derive_deserialize/: class_handler.rs  enum_handler.rs  field_processing.rs  helpers.rs  interface_handler.rs  mod.rs  tests.rs  type_alias_handler.rs  types.rs  validation.rs
src/builtin/serde/derive_serialize/: foreign_types.rs  mod.rs  tests.rs  types.rs
src/host/: config.rs  derived.rs  dispatch.rs  expand.rs  import_registry.rs  mod.rs  patch_applicator.rs  scanner.rs  type_resolver.rs
src/host/config/: loader.rs  mod.rs  namespaces.rs  parser.rs  tests.rs
src/host/derived/: descriptors.rs  manifest.rs  mod.rs  registry.rs
src/host/dispatch/: dispatcher.rs  mod.rs  tests.rs
src/host/expand/: derive_targets.rs  external_loader.rs  helpers.rs  imports.rs  mod.rs  registration.rs  tests.rs
src/host/patch_applicator/: applicator.rs  collector.rs  helpers.rs  mod.rs  tests.rs
src/host/scanner/: collectors.rs  config.rs  core.rs  mod.rs  tests.rs
src/host/type_resolver/: helpers.rs  mod.rs  resolver.rs  tests.rs
src/test/: class_features.rs  decorator_stripping.rs  derive_basic.rs  early_bailout.rs  enum_tests.rs  expansion_context.rs  foreign_types.rs  interface_tests.rs  jsdoc_tests.rs  mod.rs  serde_tests.rs  source_mapping.rs  type_alias_tests.rs
tests/: oxc_ts_quote.rs  template.rs
tests/fixtures/: field-controller.fixture.expanded.ts  field-controller.fixture.ts  macro-user.expanded.ts  macro-user.ts
tests/template/: ir_declarations.rs  ir_expressions.rs  ir_patterns.rs  ir_statements.rs  ir_types.rs  test_single.rs
