[package]
name = "macroforge_ts"
description = "TypeScript macro expansion engine - write compile-time macros in Rust"
version = "0.1.78"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/macroforge-ts/core"
homepage = "https://github.com/macroforge-ts/core"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macroforge"
path = "src/bin/cli/main.rs"

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "3.5.2", features = ["napi8", "compat-mode"], optional = true }
napi-derive = { version = "3.3.3", optional = true }

# WASM Bindings
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# SWC Core for TypeScript parsing and transformation
swc_core = { version = "59.0.1", features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_utils",
    "common"
] }

# Macroforge crates (local development)
macroforge_ts_syn = {path = "/Users/jakoblochinski/Softworks/GitHub/workspace/macroforge-ts/crates/macroforge_ts_syn"}
macroforge_ts_quote = {path = "/Users/jakoblochinski/Softworks/GitHub/workspace/macroforge-ts/crates/macroforge_ts_quote"}
macroforge_ts_macros = {path = "/Users/jakoblochinski/Softworks/GitHub/workspace/macroforge-ts/crates/macroforge_ts_macros"}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Case conversion
convert_case = "0.11"

inventory = "0.3.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

# Watch command
notify-debouncer-full = "0.7"
sha2 = "0.11"
tempfile = "3.13.0"

# Ordered maps
indexmap = "2.7"

# Concurrency
dashmap = "6.1"
rayon = "1.10"

# Build script utilities (optional, for napi auto-build)
libc = { version = "0.2", optional = true }

[features]
default = ["node"]
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
# Enable build script utilities (napi_auto_build)
build = ["libc"]

[build-dependencies]
napi-build = { version = "2.3.1", optional = true }
libc = "0.2"

[dev-dependencies]
trybuild = "1.0"
