[package]
name = "macroforge_ts"
description = "TypeScript macro expansion engine - write compile-time macros in Rust"
version = "0.1.78"
edition = "2024"
authors = ["macroforge contributors"]
license = "MIT"
repository = "https://github.com/macroforge-ts/core"
homepage = "https://github.com/macroforge-ts/core"
keywords = ["typescript", "macros", "codegen", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "macroforge"
path = "src/bin/cli/main.rs"

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "3.5.2", features = ["napi8", "compat-mode"], optional = true }
napi-derive = { version = "3.3.3", optional = true }

# WASM Bindings
wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

# SWC Core for TypeScript parsing and transformation
swc_core = { version = "59.0.1", optional = true, features = [
    "ecma_ast",
    "ecma_parser",
    "ecma_codegen",
    "ecma_visit",
    "ecma_utils",
    "common"
] }

# Oxc for TypeScript parsing and transformation
oxc_allocator = { version = "0.53", optional = true }
oxc_ast = { version = "0.53", optional = true }
oxc_parser = { version = "0.53", optional = true }
oxc_span = { version = "0.53", optional = true }
oxc_codegen = { version = "0.53", optional = true }

# Macroforge crates (local development)
macroforge_ts_syn = {path = "../macroforge_ts_syn"}
macroforge_ts_quote = {path = "../macroforge_ts_quote"}
macroforge_ts_macros = {path = "../macroforge_ts_macros"}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Case conversion
convert_case = "0.11"

inventory = "0.3.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

# Watch command
notify-debouncer-full = "0.7"
sha2 = "0.11"
tempfile = "3.13.0"

# Ordered maps
indexmap = "2.7"

# Concurrency
dashmap = "6.1"
rayon = "1.10"

# Build script utilities (optional, for napi auto-build)
libc = { version = "0.2", optional = true }

[features]
default = ["wasm", "oxc"]
swc = ["dep:swc_core", "macroforge_ts_syn/swc", "macroforge_ts_quote/swc"]
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys"]
oxc = [
    "dep:oxc_allocator", 
    "dep:oxc_ast", 
    "dep:oxc_parser", 
    "dep:oxc_span", 
    "dep:oxc_codegen", 
    "macroforge_ts_syn/oxc",
    "macroforge_ts_quote/oxc"
]
# Enable build script utilities (napi_auto_build)
build = ["libc"]

[build-dependencies]
napi-build = { version = "2.3.1", optional = true }
libc = "0.2"

[dev-dependencies]
trybuild = "1.0"
